// to publish run ./gradlew --stacktrace publishToSonatype closeAndReleaseSonatypeStagingRepository
buildscript {
    repositories {
        mavenCentral()
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:6.0.2'
        classpath 'io.github.gradle-nexus:publish-plugin:1.1.0'
    }
}

plugins {
    id 'io.github.gradle-nexus.publish-plugin' version '1.1.0'
}

ext.elementsVersion = '3.0.14-SNAPSHOT'
ext.junitPlatformLauncherVersion = '1.8.2'
ext.junitJupiterVersion = '5.8.2'
ext.snakeyamlVersion = '2.0'
ext.simplejndiVersion = '0.11.4.1'
ext.findbugsVersion = '3.0.2'
ext.lmaxDisruptorVerion = '3.4.2'
ext.slf4jVersion = '1.7.36'
ext.groovyVersion = '4.0.29'
ext.caffeineVersion = '2.9.3'
ext.guavaVerions = '33.5.0-jre'  // Using explicit -jre variant to avoid Android/JRE ambiguity
ext.scalaVersion = '2.13.10'
ext.akkaVersion = '2.6.9'
ext.akkaScalaVersion = '2.13'
ext.aeronVersion = '1.30.0'
ext.kryoVersion = '5.6.2'
ext.bytebuddyVersion = '1.17.8'
ext.ehcacheVersion = '3.10.0'
ext.javaCacheApiVerison = '1.1.1'
ext.javamailVersion = '1.6.2'
ext.javaxWsRsApiVersion = '2.1.6'
ext.javaxWsApiVersion = '2.3.1'
ext.javaxJwsApiVersion = '1.1'
ext.javaeeApiVersion = '8.0.1'
ext.jacksonVersion = '2.16.1'
ext.jettyVersion =  '9.4.57.v20241219'
ext.tomcatVersion = '9.0.79'
ext.tomcatLog4jVersion = '9.0.0.M6'
ext.log4jVersion = '2.23.0'
ext.cxfVersion = '3.5.11'
ext.stax2ApiVersion = '4.2.2'
ext.httpclientVersion = '4.5.13'
ext.asmVersion = '9.5'  // network
ext.cassandraDriver4Version = '4.12.0'
ext.reactiveStreamsVersion = '1.0.3'
ext.opendmkVersion = '1.0-b02'
ext.simplejmxVersion = '1.17'
ext.quartzVersion = '2.4.0'
ext.hikariVersion = '3.4.5'
ext.mariadbClientVersion = '2.6.2'
ext.hibernateVersion = '5.4.27.Final'  // note 5.4.6 - 5.4.8 have major stack overflow issues
ext.bouncycastleVersion = '1.79'
ext.jaxbVersion = '2.4.0'      // security
ext.jaxbRuntimeVersion = '2.3.5'
ext.jaxbOldVersion = '2.3.0'
ext.jnrffiVersion = '2.1.16'  // cassandra and akka cluster typed
ext.nettyVersion = '4.1.119.Final'
ext.commonsCodec = '1.16.1'

// Add repositories for the root project
repositories {
    mavenCentral()
}

allprojects {
    group 'net.e6tech'
    // version '1.0-SNAPSHOT'
    version "${elementsVersion}"

    apply plugin: 'java'

    sourceCompatibility = 21
    targetCompatibility = 21

    tasks.withType(Javadoc) {
        options.addStringOption('Xdoclint:syntax', '-quiet')
    }

    repositories {
        mavenCentral()
    }

    configurations {
        api.exclude(group: 'jakarta.annotation') // replaced with javaee-api, which used by hibernate
        api.exclude(group: 'jakarta.activation') // in javaee
        api.exclude group: 'javax.activation' // in javaee, but we need an implementation, which is in jaxb-runtime
        api.exclude(group: 'jakarta.ws.rs') // replaced with javaee-api from network
        api.exclude(group: 'javax.xml.bind')
        // replaced with jakarta.xml.bind which comes from org.glassfish.jaxb:jaxb-runtime
        api.exclude(group: 'javax.persistence')    // in javaee
        // api.exclude(group: 'javax.servlet') // This is needed because LocalStrings resource bundle is missing from javaee
    }
}

// Configure Nexus Publishing for automated staging repository management
nexusPublishing {
    repositories {
        sonatype {
            nexusUrl.set(uri("https://ossrh-staging-api.central.sonatype.com/service/local/"))
            snapshotRepositoryUrl.set(uri("https://central.sonatype.com/repository/maven-snapshots/"))
            username = project.findProperty("ossrhUsername") ?: System.getenv("OSSRH_USERNAME")
            password = project.findProperty("ossrhPassword") ?: System.getenv("OSSRH_PASSWORD")

        }
    }
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}")
    testImplementation("org.junit.platform:junit-platform-launcher:${junitPlatformLauncherVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}")
}

subprojects {

    group 'net.e6tech'
    version "${elementsVersion}"

    apply plugin: 'groovy'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'signing'

    test {
        useJUnitPlatform {
            excludeTags "manual"
        }
    }

    archivesBaseName = "elements-${project.name}"

    javadoc {
        source = sourceSets.main.allJava
        classpath = configurations.api
    }

    apply plugin: 'org.owasp.dependencycheck'
    dependencyCheck {
        failBuildOnCVSS = 9
        suppressionFile = 'owasp.xml'
    }

    task sourcesJar(type: Jar) {
        archiveBaseName.set "elements-${project.name}"
        archiveClassifier.set 'sources'
        from sourceSets.main.allSource
    }

    task javadocJar(type: Jar) {
        archiveBaseName.set "elements-${project.name}"
        archiveClassifier.set 'javadoc'
        from javadoc
    }

    artifacts {
        archives sourcesJar
        archives javadocJar
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifactId "elements-${project.name}"

                artifact sourcesJar
                artifact javadocJar

                pom {
                    name = project.name
                    description = "elements-${project.name}"
                    url = 'https://github.com/futehkao/elements.git'

                    licenses {
                        license {
                            name = 'The Apache License, Version 2.0'
                            url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                        }
                    }

                    developers {
                        developer {
                            id = 'futeh'
                            name = 'Futeh Kao'
                            email = 'futeh@episodesix.com'
                        }
                    }

                    scm {
                        connection = 'scm:git:https://github.com/futehkao/elements.git'
                        developerConnection = 'scm:git:https://github.com/futehkao/elements.git'
                        url = 'https://github.com/futehkao/elements.git'
                    }
                }
            }
        }
    }

    ext.isReleaseVersion = !version.endsWith("SNAPSHOT")

    signing {
        required { isReleaseVersion && gradle.taskGraph.hasTask("publish") }
        sign publishing.publications.mavenJava
    }

    tasks.withType(Sign).configureEach {
        onlyIf { isReleaseVersion && project.hasProperty("signing.keyId") }
    }
}